[project]
name = "comfy-sentry"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["sentry-sdk"]

[project.urls]
Repository = "https://github.com/teward/Comfy-Sentry"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfy-Sentry"
Icon = ""
